--- a/Freight/Content/Site.css
+++ b/Freight/Content/Site.css
@@ -1,4 +1,5 @@
-﻿body {
+﻿
+body {
     padding-top: 50px;
     padding-bottom: 20px;
     font-family: Roboto,sans-serif;
@@ -17,7 +18,7 @@
 .dl-horizontal dt {
     white-space: normal;
 }
-
+#handleExport {color: #fff}
 .form-group {
     margin-left: 15px;
     margin-right: 15px
