--- a/Freight/Views/Calculator/Index.cshtml
+++ b/Freight/Views/Calculator/Index.cshtml
@@ -46,15 +46,15 @@
         <div class="menu-list">
 
             <ul id="menu-content" class="menu-content collapse out">
-                @*@foreach (var m in MM_Freight_Rate_API_Backend.Hepler.ListModules)
-                    {
-                        <a href="@m.URL" style="text-decoration:none">
-                            <li data-toggle="collapse" class="collapsed" data-target="#products">
-                                <i class="fa fa-lg @m.ICON_IMAGE" style="padding-right:10px"></i>
-                                @m.MODULE_NAME
-                            </li>
-                        </a>
-                    }*@
+                @foreach (var m in MM_Freight_Rate_API_Backend.Hepler.ListModules)
+                {
+                    <a href="@m.URL" style="text-decoration:none">
+                        <li data-toggle="collapse" class="collapsed" data-target="#products">
+                            <i class="fa fa-lg @m.ICON_IMAGE" style="padding-right:10px"></i>
+                            @m.MODULE_NAME
+                        </li>
+                    </a>
+                }
             </ul>
         </div>
     </div>
