--- a/Freight/Views/SurchargeRate/Index.cshtml
+++ b/Freight/Views/SurchargeRate/Index.cshtml
@@ -13,7 +13,7 @@
         <div class="menu-list">
 
             <ul id="menu-content" class="menu-content collapse out">
-                @*@foreach (var m in MM_Freight_Rate_API_Backend.Hepler.ListModules)
+                @foreach (var m in MM_Freight_Rate_API_Backend.Hepler.ListModules)
                     {
                         <a href="@m.URL" style="text-decoration:none">
                             <li data-toggle="collapse" class="collapsed" data-target="#products">
@@ -21,7 +21,7 @@
                                 @m.MODULE_NAME
                             </li>
                         </a>
-                    }*@
+                    }
             </ul>
         </div>
     </div>
