--- a/Freight/Views/Calculator/Index.cshtml
+++ b/Freight/Views/Calculator/Index.cshtml
@@ -252,7 +252,7 @@
                 dataType: "json",
                 contentType: "application/json;charset=utf-8",
                 success: function (data) {
-                    var s = '<option value="">Please Select Packing Type</option>';
+                    var s = '<option value="">Please Select Packaging Type</option>';
                     for (var i = 0; i < data.data.length; i++) {
                         s += '<option value="' + data.data[i].value + '">' + data.data[i].text + '</option>';
                     }
