--- a/Freight/Views/Home/AssignRole.cshtml
+++ b/Freight/Views/Home/AssignRole.cshtml
@@ -150,7 +150,7 @@
             success: function (response) {
                 var s = '';
                 for (var i = 0; i < response.data.length; i++) {
-                    if (response.data[i].text != "Approved") {
+                    if (response.data[i].text != "Active") {
                         s += '<option value="' + response.data[i].value + '">' + response.data[i].text + '</option>';
                     }
                 }
