--- a/Freight/Views/SurchargeRate/Index.cshtml
+++ b/Freight/Views/SurchargeRate/Index.cshtml
@@ -52,12 +52,12 @@
                 <div class="col-xs-4 col-md-4" style="margin-top: 15px; ">
                     <label class="col-md-12 row">DHL (%)</label>
                     <input id="tdSelectdhl" value="" hidden />
-                    <input class="form-select form-control-lg mb-5 col-md-12" type="number" id="dhl" value="" />
+                    <input class="form-select form-control-lg mb-5 col-md-12" type="number" min="0" id="dhl" value="" />
                 </div>
                 <div class="col-xs-4 col-md-4" style="margin-top: 15px; ">
                     <label class="col-md-12 row">FedEx (%)</label>
                     <input id="tdSelectfedex" value="" hidden />
-                    <input class="form-select form-control-lg mb-5 col-md-12" type="number" id="fedex" value="" />
+                    <input class="form-select form-control-lg mb-5 col-md-12" type="number" min="0" id="fedex" value="" />
                 </div>
             </div>
             <div class="row ml-0">
